@@ -1,9 +1,14 @@
 package com.kienluu.jobfinderbackend.service.implement;
 
 import com.kienluu.jobfinderbackend.dto.JobDto;
+import com.kienluu.jobfinderbackend.dto.ReportedJobDto;
 import com.kienluu.jobfinderbackend.entity.CompanyEntity;
 import com.kienluu.jobfinderbackend.entity.JobEntity;
 import com.kienluu.jobfinderbackend.entity.ReportEntity;
+import com.kienluu.jobfinderbackend.model.CompanyState;
+import com.kienluu.jobfinderbackend.model.JobState;
+import com.kienluu.jobfinderbackend.model.ReportStatus;
+import com.kienluu.jobfinderbackend.repository.*;
 import com.kienluu.jobfinderbackend.model.*;
 import com.kienluu.jobfinderbackend.repository.CompanyRepository;
 import com.kienluu.jobfinderbackend.repository.JobRepository;
@@ -17,8 +22,10 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.time.YearMonth;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -29,6 +36,7 @@ public class AdminService implements IAdminService {
     private final UserRepository userRepository;
     private final JobRepository jobRepository;
     private final ReportRepository reportRepository;
+    private final JobApplicationRepository jobApplicationRepository;
 
     @Override
     @Transactional
@@ -112,16 +120,20 @@ public class AdminService implements IAdminService {
     }
 
     @Override
-    public List<JobDto> reportedJobs() {
-        List<JobEntity> jobs = jobRepository.findReportedJobs();
-        return jobs.stream()
-                .map(job -> JobDto.builder()
-                        .jobId(job.getJobId())
-                        .companyId(job.getCompany().getId())
-                        .companyName(job.getCompany().getName())
-                        .logo(job.getCompany().getLogo())
-                        .title(job.getTitle())
-                        .build()).toList();
+    public List<ReportedJobDto> reportedJobs() {
+        List<Object[]> results = jobRepository.findReportedJobs();
+
+        return results.stream()
+                .map(result -> new ReportedJobDto(
+                        (Long) result[0],
+                        (String) result[1],
+                        (String) result[2],
+                        (String) result[3],
+                        (String) result[4],
+                        (Long) result[5]
+                ))
+                .collect(Collectors.toList());
+
     }
 
     @Override
@@ -197,7 +209,12 @@ public class AdminService implements IAdminService {
         return jobCounts;
     }
 
+    //------------------------------job apply-------------------------------------
 
+    @Override
+    public int countAppsByMonth(int month, int year) {
+        return jobApplicationRepository.countAppsByMonth(month, year);
+    }
     @Override
     public List<JobByField> getJobsByField(int month, int year) {
         return jobRepository.getJobsByField(month, year);
